
## [0.11...]
### 2018-10-12
	Fixed: Altered foreground monitoring to no longer leak tiny amount of memory whenever an app that has foreground rules enabled
		closes down while in the foreground (most cases of normally exiting said apps).
	Changed: Memory log (used for displaying logs in the UI) is no longer static. This should not have any visible changes to users.
### 2018-10-11
	Added: Option to mute network error logging (Configuration > Logging > Show network errors).
		This can get really spammy on certain networks without this option.
	Changed: Network errors are now immediately shown and they will stop showing after 5 consecutive reports.
### 2018-10-10
	Fixed: Errors that output stacktraces cause only 1 fatal error instead of 3.
	Added: Self-maintenance to run garbage collector once a day at midnight.
### 2018-09-19
	Fixed: Some internal locking. Should behave better in corner cases.
	Fixed: Exit behaviour. Should be more consistent.
	Fixed: Admin elevation from command-line arguments should be more reliable and not cause TM to just vanish on occasion.
### 2018-09-08
	Fixed: Potential permanent resource leakage related to static event handlers.
	Changed: IP changes are now in Info logging level instead of Debug.
	Added: Option to show affinity mask as bitmask or as decimal. Defaults to decimal. Bitmask is also no longer in reversed order.
	Changed: UI no longer shows "-- Any --" when nothing is configured and instead shows simply nothing.
	Added: Properties.Settings is now used for some configuration options, namely the new affinity mask option.
		This has some problems associated with it and may be transferred to the old .ini format.
### 2018-08-28
	Fixed: If no default microphone is set up, microphone manager won't crash the entire app.
	Added: Detect session end for clean shutdown.
### 2018-08-26
	Added: Total network device errors shown after deltas.
### 2018-07-20