@@ -1,10 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
 <configuration>
-  <configSections>
-    <sectionGroup name="userSettings" type="System.Configuration.UserSettingsGroup, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" >
-      <section name="Taskmaster.Properties.Settings" type="System.Configuration.ClientSettingsSection, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" allowExeDefinition="MachineToLocalUser" requirePermission="false" />
-    </sectionGroup>
-  </configSections>
   <startup>
     <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.7"/>
   </startup>
@@ -18,17 +13,4 @@
     <GCCpuGroup enabled="true"/> <!-- required by above -->
     <gcServer enabled="true"/> <!-- required by above -->
   </runtime>
- <userSettings>
-  <Taskmaster.Properties.Settings>
-   <setting name="UpgradeNeeded" serializeAs="String">
-    <value>True</value>
-   </setting>
-   <setting name="AffinityStyle" serializeAs="String">
-    <value>1</value>
-   </setting>
-   <setting name="DeleteOldSettings" serializeAs="String">
-    <value>False</value>
-   </setting>
-  </Taskmaster.Properties.Settings>
- </userSettings>
 </configuration>
