@@ -7,6 +7,7 @@ Comprehensive changes can be found in Git change history:
 	Fixed: Altered foreground monitoring to no longer leak tiny amount of memory whenever an app that has foreground rules enabled
 		closes down while in the foreground (most cases of normally exiting said apps).
 	Changed: Memory log (used for displaying logs in the UI) is no longer static. This should not have any visible changes to users.
+	Removed: Properties.Settings, it just didn't provide anything useful.
 ### 2018-10-11
 	Added: Option to mute network error logging (Configuration > Logging > Show network errors).
 		This can get really spammy on certain networks without this option.
